# globule-seminario

./: .gitignore  README.md  hello.py  pyproject.toml
m1-67/: Color-Color Diagram.ipynb  Estimate of initial globule parameters.ipynb  JWST-combo-E.ecsv  MAST_wr124.json  MAST_wr124_jwst.json  Medición de errores.ipynb  PyNeb.ipynb  Resultados de parametrso de m1-67.ipynb  Seleccionados_ind.txt  Untitled.ipynb  agosto 28.ipynb  check model.ipynb  correction_coor_2.csv  graficas con errore.ipynb  intensity.ipynb  ionizing-luminosity.org  m1-67-big-boxes.reg  m1-67-bowshocks-poster.md  m1-67-globule-parameters-JWST.ecsv  m1-67-globule-parameters.ecsv  m1-67-globules-GROUPS-NEW.afdesign  m1-67-globules-GROUPS-NEW.afdesign~lock~  m1-67-globules-GROUPS.afdesign  m1-67-globules.org  m1-67-globules.reg  m1-67-spitzer-irs-LH.reg  m1-67-spitzer-irs-LL1.reg  m1-67-spitzer-irs-LL2.reg  m1-67-spitzer-irs-SH.reg  m1-67-spitzer-irs-SL1.reg  m1-67-spitzer-irs-SL2.reg  m1-67-spitzer-irs-boxes.reg  m1-67-spitzer-irs.reg  m1_67_globules_hst.ipynb  m1_67_globules_hst.py  miri-spec-samples.reg  r0.ecsv  wr-kinematics.org  wr-map-analysis.org  wr124-cloudy.org  (+2 more)
m1-67/.ipynb_checkpoints/: calcular la tasa de fotoinizantes -checkpoint.ipynb
m1-67/data/: gaia-sources-wr124.ecsv  (+156 more)
roberto-notebooks/: Data for LDN 1616.ipynb  calculations for h_0, recombinations and surface brightness of the shell.ipynb  calculos fisicos de LDN 1616.ipynb  parameters for the globules in M1-67.ipynb  valores en el punto de choque.ipynb
simulations/: hydro-simulations.org
will-documents/: roberto-defensa.org
(+189 files in other folders)
