[project]
name = "globule-seminario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.1.3",
    "astroquery>=0.4.7",
    "cmasher>=1.8.0",
    "jupyter>=1.1.1",
    "lmfit>=1.3.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "photutils>=1.13.0",
    "pyright>=1.1.381",
    "python-language-server>=0.36.2",
    "regions>=0.9",
    "scikit-image>=0.24.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
    "synphot>=1.4.0",
    "typer>=0.12.5",
    "uncertainties>=3.2.2",
    "webbpsf>=1.4.0",
]

